# andromeda-nft-project

./: README.md
app/: page.tsx
app/certificate/: page.tsx
app/certificate/[collection]/[id]/: page.tsx
app/certificate/collection/[address]/: page.tsx
app/certificate/portfolio/: page.tsx
contracts/: Cargo.toml  certificate_nft.rs
src/: config.ts
src/modules/certificate/: types.ts
src/modules/certificate/components/: CertificateCard.tsx  CertificateDetails.tsx  CertificatesList.tsx  CreateCertificate.tsx  InstitutionCard.tsx  InstitutionsList.tsx  index.ts
