[package]
name = "certificate-nft"
version = "0.1.0"
authors = ["Andromeda"]
edition = "2021"
description = "A CosmWasm NFT contract for educational certificates"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
cw721 = "0.15.0"
cw721-base = { version = "0.15.0", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.0.0" 